# 1auth-modules

./: .gitignore  CLAUDE.md  README.md  foundry.toml  package.json  pnpm-lock.yaml
.github/workflows/: test.yml
artifacts/Guardian/: Guardian.json  verify.json
artifacts/MockNFT/: MockNFT.json  verify.json
artifacts/MockRWA/: MockRWA.json  verify.json
artifacts/MockSwap/: MockSwap.json  verify.json
artifacts/OneAuthAppValidator/: IERC20.json  OneAuthAppValidator.json  verify.json
artifacts/OneAuthValidator/: OneAuthValidator.json  verify.json
artifacts/RecoverySigner/: RecoverySigner.json  verify.json
script/: ComputeTestChallenge.s.sol  DeployDemo.s.sol  GenerateGoldenVectors.s.sol
sdk/: .gitignore  Cargo.toml  build.sh
sdk/encoding-core/: Cargo.toml
sdk/encoding-core/src/: keccak.rs  lib.rs  merkle.rs  traits.rs  types.rs
sdk/oneauth/: Cargo.toml
sdk/oneauth/src/: digest.rs  lib.rs  (+4 more)
sdk/ts/: package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
sdk/webauthn-v2/: Cargo.toml
sdk/webauthn-v2/src/: digest.rs  encode.rs  lib.rs  module.rs  signature.rs
sdk/webauthn-v2/tests/: golden.rs
src/OneAuth/: Guardian.sol  IOneAuthAppValidator.sol  IOneAuthValidator.sol  OneAuthAppRecoveryBase.sol  OneAuthAppValidator.sol  OneAuthRecoveryBase.sol  OneAuthValidator.sol  RecoverySigner.sol
src/WebAuthnValidator/: EIP712Lib.sol  IWebAuthnValidatorV2.sol  OriginLib.sol  UVExemptBase.sol  WebAuthnRecoveryBase.sol  WebAuthnValidatorV2.sol
src/demo/: MockNFT.sol  MockRWA.sol  MockSwap.sol
test/demo/: MockNFT.t.sol  MockRWA.t.sol  MockSwap.t.sol
(+47 files in other folders)
