[package]
name = "webauthn-v2"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
alloy-primitives = { version = "0.8", features = ["serde"] }
alloy-sol-types = "0.8"
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
tiny-keccak = { version = "2", features = ["keccak"] }
hex = "0.4"
encoding-core = { path = "../encoding-core" }

[dev-dependencies]
wasm-bindgen-test = "0.3"
num-bigint = "0.4"
